Fix branding to The Hyde Park Cottage and add OG image

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hyde Cottage • Historic Hyde Park</title>
-    <meta name="description" content="Hyde Cottage is a cozy 1940s retreat in Hyde Park, NY—vintage charm, modern comforts, and a perfect base for exploring the Hudson Valley." />
+    <title>Hyde Park Cottage • Historic Hyde Park</title>
+    <meta name="description" content="Hyde Park Cottage is a cozy 1940s retreat in Hyde Park, NY—vintage charm, modern comforts, and a perfect base for exploring the Hudson Valley." />
     <link rel="icon" href="/favicon.ico" />
-    <meta property="og:title" content="The Cozy Cape • Hyde Park" />
+    <meta property="og:title" content="Hyde Park Cottage • Hyde Park" />
     <meta property="og:description" content="Charming Hudson Valley stay near CIA, Walkway, and Rhinebeck." />
     <meta property="og:type" content="website" />
     <!-- Google Fonts -->
