Add static OG and Twitter meta tags with share image

--- a/index.html
+++ b/index.html
@@ -3,16 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hyde Park Cottage • Historic Hyde Park</title>
-    <meta name="description" content="Hyde Park Cottage is a cozy 1940s retreat in Hyde Park, NY—vintage charm, modern comforts, and a perfect base for exploring the Hudson Valley." />
+
+    <!-- Primary SEO -->
+    <title>The Hyde Park Cottage – Historic Hyde Park NY Airbnb</title>
+    <meta
+      name="description"
+      content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley, the Culinary Institute of America, the FDR Library, and the Walkway Over the Hudson."
+    />
+    <link rel="canonical" href="https://www.thehydeparkcottage.com/" />
+
+    <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" />
-    <meta property="og:title" content="Hyde Park Cottage • Hyde Park" />
-    <meta property="og:description" content="Charming Hudson Valley stay near CIA, Walkway, and Rhinebeck." />
+
+    <!-- Open Graph (default for home page / non-JS scrapers) -->
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="The Hyde Park Cottage" />
+    <meta
+      property="og:title"
+      content="The Hyde Park Cottage – Historic Hyde Park NY Airbnb"
+    />
+    <meta
+      property="og:description"
+      content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley, the Culinary Institute of America, the FDR Library, and the Walkway Over the Hudson."
+    />
+    <meta property="og:url" content="https://www.thehydeparkcottage.com/" />
+    <meta
+      property="og:image"
+      content="https://www.thehydeparkcottage.com/og/the-hyde-park-cottage-og.jpg"
+    />
+    <meta
+      property="og:image:alt"
+      content="The Hyde Park Cottage exterior and backyard in Hyde Park, NY"
+    />
+
+    <!-- Twitter Card (default) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="The Hyde Park Cottage – Historic Hyde Park NY Airbnb"
+    />
+    <meta
+      name="twitter:description"
+      content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.thehydeparkcottage.com/og/the-hyde-park-cottage-og.jpg"
+    />
+
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
