Add static OG and Twitter meta tags with share image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary SEO -->
-    <title>The Hyde Park Cottage – Historic Hyde Park NY Airbnb</title>
+    <title>Hyde Park Cottage – Historic Hyde Park NY Airbnb</title>
     <meta
       name="description"
       content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley, the Culinary Institute of America, the FDR Library, and the Walkway Over the Hudson."
