Add OG image dimensions for Facebook & update SEO

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary SEO -->
-    <title>Hyde Park Cottage – Historic Hyde Park NY Airbnb</title>
+    <title>The Hyde Park Cottage – Historic Hyde Park NY Airbnb</title>
     <meta
       name="description"
       content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley, the Culinary Institute of America, the FDR Library, and the Walkway Over the Hudson."
@@ -15,7 +15,7 @@
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" />
 
-    <!-- Open Graph (default for home page / non-JS scrapers) -->
+    <!-- Open Graph (default for non-JS scrapers like Facebook) -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="The Hyde Park Cottage" />
     <meta
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:description"
-      content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley, the Culinary Institute of America, the FDR Library, and the Walkway Over the Hudson."
+      content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley."
     />
     <meta property="og:url" content="https://www.thehydeparkcottage.com/" />
     <meta
@@ -36,7 +36,11 @@
       content="The Hyde Park Cottage exterior and backyard in Hyde Park, NY"
     />
 
-    <!-- Twitter Card (default) -->
+    <!-- NEW: Facebook requires these to instantly show the image -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
@@ -59,6 +63,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
