Add OG image dimensions for Facebook & update SEO

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary SEO -->
-    <title>The Hyde Park Cottage – Historic Hyde Park NY Airbnb</title>
+    <title>Hyde Park Cottage – Historic Hyde Park NY Airbnb</title>
     <meta
       name="description"
-      content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley, the Culinary Institute of America, the FDR Library, and the Walkway Over the Hudson."
+      content="Stay at Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley, the Culinary Institute of America, the FDR Library, and the Walkway Over the Hudson."
     />
     <link rel="canonical" href="https://www.thehydeparkcottage.com/" />
 
@@ -17,14 +17,14 @@
 
     <!-- Open Graph (default for non-JS scrapers like Facebook) -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="The Hyde Park Cottage" />
+    <meta property="og:site_name" content="Hyde Park Cottage" />
     <meta
       property="og:title"
-      content="The Hyde Park Cottage – Historic Hyde Park NY Airbnb"
+      content="Hyde Park Cottage – Historic Hyde Park NY Airbnb"
     />
     <meta
       property="og:description"
-      content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley."
+      content="Stay at Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley."
     />
     <meta property="og:url" content="https://www.thehydeparkcottage.com/" />
     <meta
@@ -33,7 +33,7 @@
     />
     <meta
       property="og:image:alt"
-      content="The Hyde Park Cottage exterior and backyard in Hyde Park, NY"
+      content="Hyde Park Cottage exterior and backyard in Hyde Park, NY"
     />
 
     <!-- NEW: Facebook requires these to instantly show the image -->
@@ -44,11 +44,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="The Hyde Park Cottage – Historic Hyde Park NY Airbnb"
+      content="Hyde Park Cottage – Historic Hyde Park NY Airbnb"
     />
     <meta
       name="twitter:description"
-      content="Stay at The Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley."
+      content="Stay at Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley."
     />
     <meta
       name="twitter:image"
