--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       name="description"
       content="Stay at Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley, the Culinary Institute of America, the FDR Library, and the Walkway Over the Hudson."
     />
-    <link rel="canonical" href="https://www.thehydeparkcottage.com/" />
+    <link rel="canonical" href="https://thehydeparkcottage.com/" />
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" />
 
     <!-- Open Graph (default for non-JS scrapers like Facebook) -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Hyde Park Cottage" />
+    <meta property="og:site_name" content="The Hyde Park Cottage" />
     <meta
       property="og:title"
       content="Hyde Park Cottage – Historic Hyde Park NY Airbnb"
@@ -26,17 +26,15 @@
       property="og:description"
       content="Stay at Hyde Park Cottage, a cozy 1940s retreat in historic Hyde Park, NY—modern amenities, vintage charm, and a perfect base for exploring the Hudson Valley."
     />
-    <meta property="og:url" content="https://www.thehydeparkcottage.com/" />
+    <meta property="og:url" content="https://thehydeparkcottage.com/" />
     <meta
       property="og:image"
-      content="https://www.thehydeparkcottage.com/og/the-hyde-park-cottage-og.jpg"
+      content="https://thehydeparkcottage.com/og/the-hyde-park-cottage-og.jpg"
     />
     <meta
       property="og:image:alt"
       content="Hyde Park Cottage exterior and backyard in Hyde Park, NY"
     />
-
-    <!-- NEW: Facebook requires these to instantly show the image -->
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
@@ -52,7 +50,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.thehydeparkcottage.com/og/the-hyde-park-cottage-og.jpg"
+      content="https://thehydeparkcottage.com/og/the-hyde-park-cottage-og.jpg"
     />
 
     <!-- Google Fonts -->
