--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="canonical" href="https://thehydeparkcottage.com/" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
 
     <!-- Open Graph (default for non-JS scrapers like Facebook) -->
     <meta property="og:type" content="website" />
